[package]
authors = ["Tyler Boright <ru.lai.development@gmail.com>"]
description = "HashMap / Tuple-backed Markov Chains"
edition = "2018"
exclude = [".gitignore", "/.travis.yml"]
keywords = ["data-structure", "markov"]
license = "MIT OR Apache-2.0"
name = "chainkov"
readme = "readme.md"
repository = "https://github.com/ru-lai/chainkov"
version = "1.1.3"

[badges]
travis-ci = { repository = "ru-lai/chainkov" }

[dependencies]
rand = "0.7"
